Fix landing page spacing

--- a/HeroesCup.Web/wwwroot/css/style.css
+++ b/HeroesCup.Web/wwwroot/css/style.css
@@ -321,6 +321,10 @@ header {
 }
 
 /* Footer */
+
+#landing-main {
+    margin-bottom: 16px;
+}
 .custom-footer {
     margin: 0;
     padding: 0;
